--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "dev": "vite build --watch",
     "build": "vite build",
     "start": "vite preview",
-    "test": "vitest --watch"
+    "test": "vitest --watch",
+    "syncVersion": "ts-node-esm --experimental-specifier-resolution=node tools/syncVersion.ts",
+    "parseChangelog": "ts-node-esm --experimental-specifier-resolution=node tools/changelogParser.ts",
+    "prepareRelease": "pnpm syncVersion && pnpm parseChangelog",
+    "package": "ts-node-esm --experimental-specifier-resolution=node tools/packageApp.ts"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@terwer/changelog-parser": "^1.1.0",
     "@terwer/eslint-config-custom": "^1.2.0",
-    "@terwer/vite-config-custom": "^0.5.0",
+    "@terwer/vite-config-custom": "^0.6.0",
     "@tsconfig/svelte": "^4.0.1",
+    "archiver": "^5.3.1",
     "siyuan": "^0.7.1",
     "stylus": "^0.59.0",
-    "svelte": "^3.57.0"
+    "svelte": "^3.57.0",
+    "ts-node": "^10.9.1"
   }
 }
