--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@terwer/vite-config-custom": "^0.6.0",
     "@tsconfig/svelte": "^4.0.1",
     "archiver": "^5.3.1",
+    "minimist": "^1.2.8",
     "siyuan": "^0.7.1",
     "stylus": "^0.59.0",
     "svelte": "^3.57.0",
