feat: 导入工具第一个版本

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "stylus": "^0.59.0",
     "svelte": "^3.57.0",
     "ts-node": "^10.9.1",
-    "vite": "^4.3.7"
+    "vite": "^4.3.7",
+    "vite-plugin-static-copy": "^0.15.0"
   }
 }
