--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -27,3 +27,77 @@ jobs:
           pull-request-header: ':robot: A new release will be created'
           ## A JSON formatted String containing to override the outputted changelog sections
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"refactor","section":"Code Refactoring","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false},{"type":"perf","section":"Performance Improvements","hidden":false}]'
+
+      # Checkout
+      - name: Checkout
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/checkout@v3
+
+      # Install Node.js
+      - name: Install Node.js
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: 'https://registry.npmjs.org'
+
+      # Install pnpm
+      - name: Install pnpm
+        if: ${{ steps.release.outputs.release_created }}
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
+        with:
+          version: 8
+          run_install: false
+
+      # Get pnpm store directory
+      - name: Get pnpm store directory
+        if: ${{ steps.release.outputs.release_created }}
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      # Setup pnpm cache
+      - name: Setup pnpm cache
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      # Install dependencies
+      - name: Install dependencies
+        if: ${{ steps.release.outputs.release_created }}
+        run: pnpm install
+
+      # Prepare new version
+      # https://github.com/google-github-actions/release-please-action#outputs
+      - name: Prepare new version
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          pnpm prepareRelease
+
+      # Build for production
+      - name: Build for production
+        if: ${{ steps.release.outputs.release_created }}
+        run: pnpm build
+
+      # Archive package
+      - name: Build for production
+        if: ${{ steps.release.outputs.release_created }}
+        run: pnpm package
+
+      # Upload package to release
+      # https://github.com/philips-labs/terraform-aws-github-runner/blob/main/.github/workflows/release.yml#L46
+      - name: Upload package.zip to the release
+        if: ${{ steps.release.outputs.releases_created }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          ls -l ./build
+          for f in $(find ./build -name '*.zip'); do
+            gh release upload ${{ steps.release.outputs.tag_name }} $f
+          done
