--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "jsx": "preserve",
     /* Linting */
     "strict": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
 
     /* Svelte */
