--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vitest": "^0.31.3"
   },
   "dependencies": {
-    "shorthash2": "^1.0.3"
+    "shorthash2": "^1.0.3",
+    "zhi-lib-base": "^0.0.2"
   }
 }
