--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
     "package": "python scripts/package.py"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@sveltejs/vite-plugin-svelte": "^2.4.3",
     "@terwer/eslint-config-custom": "^1.3.6",
     "@tsconfig/svelte": "^4.0.1",
-    "@types/node": "^16.18.36",
-    "fast-glob": "^3.2.12",
+    "@types/node": "^16.18.39",
+    "fast-glob": "^3.3.1",
     "glob": "^7.2.3",
     "minimist": "^1.2.8",
     "rollup-plugin-livereload": "^2.0.5",
-    "siyuan": "^0.7.4",
+    "siyuan": "^0.7.8",
     "stylus": "^0.59.0",
-    "svelte": "^4.0.0",
+    "svelte": "^4.1.1",
     "ts-node": "^10.9.1",
-    "vite": "^4.3.9",
+    "vite": "^4.4.7",
     "vite-plugin-static-copy": "^0.16.0",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.4"
   },
   "dependencies": {
     "shorthash2": "^1.0.3",
+    "zhi-common": "^1.11.5",
     "zhi-lib-base": "^0.4.2"
   }
 }
