--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "terwer",
   "license": "MIT",
   "scripts": {
+    "makeLink": "python scripts/make_dev_link.py",
     "serve": "vite",
     "dev": "vite build --watch",
     "build": "vite build",
@@ -19,24 +20,25 @@
     "package": "python scripts/package.py"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@terwer/eslint-config-custom": "^1.3.6",
-    "@tsconfig/svelte": "^4.0.1",
-    "@types/node": "^16.18.36",
-    "fast-glob": "^3.2.12",
-    "glob": "^7.2.3",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^22.15.31",
+    "fast-glob": "^3.3.3",
+    "glob": "^11.0.3",
     "minimist": "^1.2.8",
     "rollup-plugin-livereload": "^2.0.5",
-    "siyuan": "^0.7.4",
-    "stylus": "^0.59.0",
-    "svelte": "^4.0.0",
-    "ts-node": "^10.9.1",
-    "vite": "^4.3.9",
-    "vite-plugin-static-copy": "^0.16.0",
-    "vitest": "^0.32.2"
+    "siyuan": "^1.1.1",
+    "stylus": "^0.64.0",
+    "svelte": "^4.2.20",
+    "ts-node": "^10.9.2",
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.0.2",
+    "vitest": "^3.2.3"
   },
   "dependencies": {
-    "shorthash2": "^1.0.3",
-    "zhi-lib-base": "^0.4.2"
-  }
+    "shorthash2": "^1.0.5",
+    "zhi-lib-base": "^0.8.0"
+  },
+  "packageManager": "pnpm@10.12.1"
 }
