--- a/package.json
+++ b/package.json
@@ -20,24 +20,26 @@
     "package": "python scripts/package.py"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@terwer/eslint-config-custom": "^1.3.6",
-    "@tsconfig/svelte": "^5.0.4",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^22.15.31",
+    "@vitejs/plugin-vue": "^5.0.4",
     "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
     "minimist": "^1.2.8",
     "rollup-plugin-livereload": "^2.0.5",
     "siyuan": "^1.1.1",
     "stylus": "^0.64.0",
-    "svelte": "^4.2.20",
     "ts-node": "^10.9.2",
     "vite": "^6.3.5",
     "vite-plugin-static-copy": "^3.0.2",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.3",
+    "vue": "^3.4.21",
+    "vue-tsc": "^2.0.6"
   },
   "dependencies": {
     "shorthash2": "^1.0.5",
+    "zhi-common": "^1.34.1",
     "zhi-lib-base": "^0.8.0"
   },
   "packageManager": "pnpm@10.12.1"
